# base-files

./: Makefile-integration.am  Makefile.am  configure.ac
Xsession.d/: 65gstreamer-plugin-registry
debian/: base-files.dirs  changelog  control  copyright  directory-list  links  postinst.in  rules
etc/: legal
ld.so.conf.d/: 50-codecs.conf
origins/: endless
share/: profile.md5sums
src/: issue.in  issue.net.in  lsb-release.in  os-release.in
